# probefs

./: .gitignore  LICENSE  README.md  probefs.yaml.example  pyproject.toml  temp_test.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-scaffold-and-async-architecture/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-directory-rendering-and-icon-system/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  2-RESEARCH.md
.planning/phases/03-theme-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  3-RESEARCH.md
.planning/phases/04-keybinding-system-and-config-infrastructure/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  4-RESEARCH.md
.planning/phases/05-file-operations-and-safety/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  5-RESEARCH.md
.planning/phases/06-preview-pane-and-status-bar/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: USER_GUIDE.md  keybindings.md
src/probefs/: __init__.py  __main__.py  app.py  config.py  probefs.tcss
src/probefs/core/: file_manager.py
src/probefs/fs/: probe_fs.py
src/probefs/icons/: __init__.py  ascii_set.py  base.py  factory.py  nerd_set.py  yaml_set.py
src/probefs/rendering/: __init__.py  columns.py  metadata.py
src/probefs/screens/: main.py  sftp.py
src/probefs/theme/: __init__.py  builtin.py  loader.py
src/probefs/themes/: dark.yaml  light.yaml  tokyo-night.yaml
src/probefs/widgets/: connection_bar.py  dialogs.py  directory_list.py  filter_bar.py  preview_pane.py  status_bar.py
tests/: test_file_manager_core.py  test_rendering_metadata.py  test_theme_loader.py
