[project]
name = "probefs"
version = "0.2.1"
description = "A fast, beautiful, keyboard-driven TUI file browser"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dale Wright", email = "diverdale@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "tui", "terminal", "file-manager", "file-browser",
    "textual", "cli", "sftp", "miller-columns",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.89.1",
    "fsspec>=2024.2.0",
    "ruamel.yaml>=0.19.1",
    "send2trash>=2.1.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/diverdale/probefs"
Repository = "https://github.com/diverdale/probefs"
"Bug Tracker" = "https://github.com/diverdale/probefs/issues"

[project.scripts]
probefs = "probefs.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
    "twine>=6.0.0",
]
